--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,33 @@
-on: push
-name: 🚀 Deploy website on push
+name: FTP Deploy Laravel to cPanel
+
+on:
+  push:
+    branches:
+      - main  # or your deployment branch
+
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  ftp-deploy:
+    name: Upload to FTP server
     runs-on: ubuntu-latest
+
     steps:
-      - name: 🚚 Get latest code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
-          server: ${{ secrets.ftp_server }}
-          username: ${{ secrets.ftp_username }}
-          password: ${{ secrets.ftp_password }}
+          php-version: '8.2'
+          extensions: mbstring, bcmath, intl, pdo, pdo_mysql, openssl
+
+      - name: Install Composer dependencies
+        run: |
+          composer install --no-dev --optimize-autoloader
+
+      - name: Upload via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           server-dir: ${{secrets.server_dir}}
