--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, bcmath, intl, pdo, pdo_mysql, openssl
-
-      - name: Install Composer dependencies
-        run: |
-          composer install --no-dev --optimize-autoloader
-
       - name: Upload via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
@@ -31,3 +21,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: ${{secrets.server_dir}}
+          timeout: 190000
